# journal

./: Cargo.nix  Cargo.toml  flake.nix  rewrite.py
src/: config.rs  dump_processor.rs  entries.rs  lastfm.rs  main.rs
templates/: audio.html  dashboard.html  entry.html  pic.html
