[package]
name = "journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathdiff = "0.2.1"
rand = "0.8.5"
rouille = "3.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19.1"
chrono = { version = "0.4", features = ["serde"] }
